[package]
name = "healthtracker"
version = "0.1.0"
authors = ["Björn Guth <scatty@bguth.de>"]
edition = "2018"
description = "A small command line tool to track some healt stats"
readme = "README.md"
repository = "https://github.com/scattenlaeufer/healthtracker-rs"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
ron = "0.6.4"
serde = { version = "1.0.123", features = ["derive"] }
chrono = { version = "0.4.12", features = ["serde"] }
prettytable-rs = "0.8.0"
xdg = "2.2.0"
